Spike of jlink image